--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-stylus": "~0.4.0",
     "grunt-contrib-imagemin": "~0.3.0",
     "grunt-contrib-uglify": "*",
-    "grunt-contrib-connect": "~0.4.0"
+    "grunt-express": "*",
+    "grunt-notify": "*"
   }
 }
