--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-usemin": "*",
     "load-grunt-tasks": "*",
     "time-grunt": "*",
-    "grunt-newer": "^0.7.0"
+    "grunt-newer": "^0.7.0",
+    "grunt-rev": "^0.1.0"
   }
 }
