--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
 		"three.js"			: "*",
 		"pixi.js"			: "*",
 		"vue"				: "*",
-		"raf.js"			: "*"
+		"raf.js"			: "*",
+		"dat-gui"			: "*"
 	}
 }
