--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "npm": "*"
   },
   "dependencies": {
-    "coffee-script": "*"
+    "coffee-script": "*",
+    "stylus": "*",
+    "jade": "*",
+    "bower": "*"
   },
   "devDependencies": {
     "grunt": "*",
