--- a/package.json
+++ b/package.json
@@ -17,32 +17,33 @@
     "coffee-script": "*",
     "del": "^0.1.3",
     "gulp": "^3.8.8",
+    "gulp-bower": "0.0.6",
     "gulp-browserify": "^0.5.0",
+    "gulp-changed": "^1.0.0",
     "gulp-coffee": "^2.2.0",
     "gulp-concat": "^2.4.0",
     "gulp-copy": "0.0.2",
+    "gulp-cssmin": "^0.1.6",
+    "gulp-htmlmin": "^0.2.0",
+    "gulp-ignore": "^1.2.0",
     "gulp-imagemin": "^1.0.1",
     "gulp-jade": "^0.8.0",
     "gulp-jshint": "^1.8.4",
+    "gulp-minify-css": "^0.3.8",
+    "gulp-minify-html": "^0.1.5",
+    "gulp-newer": "^0.3.0",
     "gulp-notify": "^1.6.0",
     "gulp-rename": "^1.2.0",
+    "gulp-rev": "^1.1.0",
     "gulp-sourcemaps": "^1.1.5",
+    "gulp-uglify": "^1.0.1",
+    "gulp-usemin": "^0.3.8",
     "gulp-util": "^3.0.1",
     "gulp-watch": "^1.0.4",
     "jade": "*",
     "nib": "^1.0.3",
+    "run-sequence": "^0.3.6",
     "stylus": "*",
-    "wiredep": "^1.8.5",
-    "gulp-bower": "0.0.6",
-    "gulp-cssmin": "^0.1.6",
-    "gulp-htmlmin": "^0.2.0",
-    "gulp-ignore": "^1.2.0",
-    "gulp-minify-css": "^0.3.8",
-    "gulp-minify-html": "^0.1.5",
-    "gulp-newer": "^0.3.0",
-    "gulp-rev": "^1.1.0",
-    "gulp-uglify": "^1.0.1",
-    "gulp-usemin": "^0.3.8",
-    "run-sequence": "^0.3.6"
+    "wiredep": "^1.8.5"
   }
 }
