--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "npm": "*"
   },
   "dependencies": {
-    "bower": "^1.3.10",
+    "bower": "*",
     "browser-sync": "^1.4.0",
     "coffee-script": "*",
     "del": "^0.1.3",
@@ -32,10 +32,11 @@
     "gulp-minify-css": "^0.3.8",
     "gulp-minify-html": "^0.1.5",
     "gulp-newer": "^0.3.0",
-    "gulp-notify": "^1.6.0",
+    "gulp-notify": "^1.7.1",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^1.1.0",
     "gulp-sourcemaps": "^1.1.5",
+    "gulp-stylus": "^1.3.3",
     "gulp-uglify": "^1.0.1",
     "gulp-usemin": "^0.3.8",
     "gulp-util": "^3.0.1",
