--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-uglify": "^1.0.1",
     "gulp-usemin": "^0.3.8",
     "gulp-util": "^3.0.1",
+    "gulp-stylus": "^1.3.3",
     "gulp-watch": "^1.0.4",
     "jade": "*",
     "nib": "^1.0.3",
