--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "gulp-minify-css": "^0.3.8",
     "gulp-minify-html": "^0.1.5",
     "gulp-newer": "^0.3.0",
-    "gulp-notify": "^1.7.1",
+    "gulp-notify": "^1.8.0",
+    "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-rev": "^1.1.0",
     "gulp-sourcemaps": "^1.1.5",
@@ -40,12 +41,14 @@
     "gulp-uglify": "^1.0.1",
     "gulp-usemin": "^0.3.8",
     "gulp-util": "^3.0.1",
-    "gulp-stylus": "^1.3.3",
     "gulp-watch": "^1.0.4",
     "jade": "*",
     "nib": "^1.0.3",
-    "run-sequence": "^0.3.6",
+    "run-sequence": "^0.3.7",
     "stylus": "*",
     "wiredep": "^1.8.5"
+  },
+  "devDependencies": {
+    "gulp-plumber": "^0.6.6"
   }
 }
